@@ -1,5 +1,9 @@
 2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Constants.h: 
+
+2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Line3.h:
 	* Plane3.h:
 	* Sphere3.h:
