@@ -1,5 +1,11 @@
 2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DRenderer.cpp:
+	* BrowserOptions.h:
+	* BrowserOptions.cpp: 
+
+2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Text.h:
 	* Text.cpp: 
 
