@@ -1,3 +1,8 @@
+2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* WalkViewer.wrl:
+	* BrowserOptions.wrl: 
+
 2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Library.mdproj:
